git fix#34